# SPARC

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  train.py
analysis/: generate_spatial_figures.py  niche_atlas.py  spatial_external.py  spatial_tcga.py
configs/: image_only.yaml  late_fusion.yaml  sparc_risk.yaml
data/: README.md
inference/: __init__.py  cohorts.py  core.py  run.py  training_cohort.py
notebooks/: README.md  compare_es_models.ipynb  compare_with_baselines.ipynb  external_eval_nlst.ipynb  external_eval_surgen.ipynb  multivariable_cox.ipynb  paper_external_figures.ipynb  treatment_response_breast.ipynb  treatment_response_ovarian.ipynb
sparc/: __init__.py  losses.py
sparc/data/: __init__.py  dataset.py  samplers.py
sparc/models/: __init__.py  factory.py  fusion.py  heads.py  mil.py
sparc/utils/: __init__.py  external_eval.py  metrics.py  seed.py  splits.py
tests/: test_smoke.py
