[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SPARC"
version = "0.1.0"
description = "SPARC: gene-program-aware survival modelling from H&E whole-slide images."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC-BY-NC-4.0" }
authors = [
    { name = "Aziz Ayed", email = "aziz.ayed@hec.edu" },
    { name = "Gabrielle Cohn", email = "gcohn@mit.edu" },
    { name = "et al." },
]
keywords = ["computational-pathology", "survival-analysis", "WSI", "TCGA",
            "gene-expression-programs", "deep-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

# Pinned minimums match what the paper experiments were run with.
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scikit-survival>=0.21",
    "scipy>=1.11",
    "h5py>=3.9",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "lifelines>=0.27",
]

[project.optional-dependencies]
# WSI handling — only needed for spatial / niche-atlas figure regeneration
wsi = [
    "openslide-python>=1.3",
    "pylibCZIrw>=4.0",
    "Pillow>=10.0",
]
# Notebooks + dev tools
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.25",
    "nbconvert>=7.0",
    "pytest>=7.4",
]

[project.scripts]
sparc-train = "train:main"
sparc-inference = "inference.run:main"

[tool.setuptools]
packages = ["sparc", "sparc.data", "sparc.models", "sparc.utils",
            "inference", "analysis"]
